# src/main/resources/api/openapi.yaml
@@ -22,6 +22,7 @@ paths:
         - Users
       description: Update your info. If yuo change your public key, all your places and received locations will be removed
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -48,6 +49,7 @@ paths:
         - Users
       description: Authenticate
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -65,6 +67,7 @@ paths:
         - Users
       description: Register new user
       requestBody:
+        required: true
         content:
           application/json:
             schema:
@@ -85,15 +88,23 @@ components:
         id:
           type: integer
           format: int32
+          nullable: false
           description: User id
         alias:
           type: string
           minLength: 1
           maxLength: 512
+          nullable: false
           description: User alias
         publicKey:
           type: string
+          format: byte
+          nullable: false
           description: User public key
+      required:
+        - id
+        - alias
+        - publicKey
     UserCreate:
       description: User create data
       type: object
@@ -102,20 +113,30 @@ components:
           type: string
           minLength: 1
           maxLength: 512
+          nullable: false
           description: User alias
         publicKey:
           type: string
+          nullable: false
           description: User public key
         password:
           type: string
+          nullable: false
           description: User password
+      required:
+        - alias
+        - publicKey
+        - password
     TokenResponse:
       description: Token response
       type: object
       properties:
         token:
           type: string
+          nullable: false
           description: Token
+      required:
+        - token
     UserAuth:
       description: User auth data
       type: object
@@ -124,18 +145,28 @@ components:
           type: string
           minLength: 1
           maxLength: 512
+          nullable: false
           description: User alias
         password:
           type: string
+          nullable: false
           description: User password
+      required:
+        - alias
+        - password
     Error:
       description: Error
       type: object
       properties:
         code:
           type: string
+          nullable: false
           description: Error code
           maxLength: 128
         message:
           type: string
+          nullable: false
           description: Error message
+      required:
+        - code
+        - message
